--- a/src/components/filmDisplay/FilmsDisplay.module.css
+++ b/src/components/filmDisplay/FilmsDisplay.module.css
@@ -38,7 +38,7 @@
 .starRate{
     border-radius: 8px;
     padding: 4px 8px;
-    width: 60px;
+    min-width: 60px;
     height: 40px;
     display: flex;
     justify-content: center;
